--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		  <button>Criar</button>
 		  <p class="message">Tem uma conta? <a href="#">Entre agora! </a></p>
 		</form>
-		<form class="login-form">
+		<form class="login-form" action="login.php">
 		  <input type="text" placeholder="Usúario"/>
 		  <input type="password" placeholder="Password"/>
 		  <button>Login</button>
